Build: Cria navbar e banner inicial

--- a/index.html
+++ b/index.html
@@ -5,12 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Loja Geek</title>
 </head>
 
 <body>
+    <div class="container-page">
+        <header>
+            <nav>
+                <div class="topo">
+                    <div class="direita">
+                        <div class="logo">
+                            <img src="./public/logo.png" alt="logo da loja geek" />
+                            <span class="loja">Loja</span>
+                            <span class="geek">Geek</span>
+                        </div>
+                        <div class="container-input">
+                            <input placeholder="O que deseja encontrar?"> <img src="./public/Pesquisa.png"
+                                alt="ícone de pesquisa" />
+                        </div>
+                    </div>
+                    <div class="button-login">
+                        <button>Login</button>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <span>
+            <div class="banner">
+                <div class="promotion">
+                    <p id="titulo">Dezembro Promocional</p>
+                    <p id="produtos">Produtos selecionados com 33% de desconto</p>
+                    <button>Ver Consoles</button>
+                </div>
+            </div>
+        </span>
 
+    </div>
 </body>
 
 </html>
